--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,36 @@
-urllib
-flask
-#http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
-elasticsearch
-tqdm
-regex
-pandas
-numpy
-transformers
+transformers==2.10.0
 flask-ngrok
 spacy
 opencv-python
 pytesseract
+boto3==1.13.1
+botocore==1.16.1
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+docutils==0.15.2
+filelock==3.0.12
+future==0.18.2
+gdown==3.11.0
+#get==2019.4.13
+idna==2.9
+jmespath==0.9.5
+joblib==0.14.1
+nltk==3.5
+numpy==1.18.4
+#post==2019.4.13
+#public==2019.4.13
+PySocks==1.7.1
+python-dateutil==2.8.1
+query-string==2019.4.13
+regex==2020.4.4
+requests==2.23.0
+s3transfer==0.3.3
+sacremoses==0.0.43
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+sentencepiece==0.1.86
+six==1.14.0
+sklearn==0.0
+tqdm==4.46.0
+urllib3==1.25.9
